# DrChrisLevy.github.io

./: .gitignore  .nojekyll  README.md  _quarto.yml  bibliography.bib  blog.html  blog.py  conftest.py  deploy_to_modal.py  index.html  index.qmd  junk.py  listings.json  main.py  pyproject.toml  robots.txt  ruff.toml  search.json  sitemap.xml  utils.py
courses/modal/: modal.md
db/: db.py
posts/agents/: agents.html  agents.ipynb  code_agent.py  coding_agent.py  python_sandbox.py  python_tool.py  react.py  requirements.txt  tool_calling_loop.py  tools.py  utils.py  web_tools.py
posts/anthropic/: anthropic.html  anthropic.ipynb  chat-bubbles-html.html  custom.css  df_explorer.html  ecommerce.py  llm.py
posts/basic_transformer_notes/: transformers.html  transformers.ipynb
posts/bits_and_bytes/: bits_bytes.html  bits_bytes.ipynb
posts/china_ai/: janus_endpoint_inference.py  janus_modal.py  qwen_deepseek.html  qwen_deepseek.ipynb  requirements.txt
posts/colpali/: README.md  colpali.py  colpali_blog.html  colpali_blog.ipynb  conftest.py  main.py  modal_stream_demo.py  multi_modal_rag.py  pdf_retriever.py  requirements.txt  utils.py  vision_language_model.py
posts/dspy/: dspy.html  dspy.ipynb
posts/fast-html/: modal_play.py
posts/fine_tune_jarvis/: fine_tune_jarvis.html  fine_tune_jarvis.ipynb
posts/gemini/: gemini2.html  requirements.txt
posts/hackathon/: main.py  pyproject.toml
scripts/: compress_images.py  course_lessons_db.py  modal_docs_scraper.py
tests/: test_audio_transcription.py  test_db.py  test_modal_docs_scraper.py  test_modal_sandbox.py
(+117 files in other folders)
