[project]
name = "teaching-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10.0",
    "bcrypt>=4.2.1",
    "datasets>=3.6.0",
    "execnb>=0.1.11",
    "fastcore>=1.7.29",
    "litellm>=1.71.0",
    "locust>=2.37.10",
    "modal>=1.0.4",
    "monsterui>=1.0.21",
    "notebook>=7.3.3",
    "openai>=1.82.0",
    "pillow>=11.3.0",
    "python-fasthtml>=0.12.20",
]

[dependency-groups]
dev = [
    "ipython>=9.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.11",
]
